<resources>
    <string name="app_name">Tempus Fugit</string>
    <string name="title_activity_main">Tempus Fugit</string>
    <string name="group_event">group</string>
    <string name="event">task</string>
    <string name="notification_channel_name">Tempus Fugit</string>
    <string name="notification_channel_description">This is the notification channel for all notifications in Tempus Fugit.</string>
    <string name="dest_overview_group_event">Group Tasks</string>
    <string name="dest_overview_archived_group_event" translatable="false">Archived Group Tasks</string>
    <string name="dest_overview_event">Current Tasks</string>
    <string name="dest_overview_todo_event" translatable="false">Do Today</string>
    <string name="dest_detailled_group_event">Detailled Group</string>
    <string name="dest_edit_group_event">Edit Group</string>
    <string name="dest_edit_event">Create/ Edit Task</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_aboutApp">About this App</string>
    <string name="menu_label_archived_group_event">View Archived Groups</string>
    <string name="menu_label_archived_event">View Archived Tasks</string>
    <string name="menu_label_backup_database">Backup Database</string>
    <string name="title_dialog_select_parent_group_event">Select a parent group:</string>
    <string name="tab_label_group_overview">Group Overview</string>
    <string name="tab_label_event_overview">Event Overview</string>
    <string name="tab_label_group_todo_overview">To Do</string>
    <string name="label_settings_under_construction">Settings are currently under construction and not available yet.</string>
    <string name="label_settings_general_preferences">General Preferences</string>
    <string name="label_settings_planning_preferences">Planning Preferences</string>
    <string name="toolbar_label_about_app">About this App</string>
    <string name="label_about_author_title">Author</string>
    <string name="label_about_author_content">This android app was created by Lukas Mechura mainly from November 2018 to February 2019. Development continues in irregular intervals til today. State: 15. January 2024</string>
    <string name="label_about_contact_title">Contact</string>
    <string name="label_about_contact_content" translatable="false">lume5641@th-wildau.de \nhttps://github.com/lukmec/tempusfugit</string>
    <string name="label_about_license_title">License</string>
    <string name="label_about_license_content" translatable="false">MIT LICENSE \nCopyright 2020 Lukas Mechura \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: \n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="label_about_3rd_party_title">Third-Party Components</string>
    <string name="label_about_3rd_party_content">This app uses the following third-party software-components: \n\n\t(<b>1</b>) ColorPicker library of kristiyanP \n\t(published under MIT license) \n\n\t(<b>2</b>) Material Icon Picker Dialog by maltaisn \n\t(published under Apache 2.0 license)</string>
    <string name="toolbar_label_archived_group_event">Archived Group Events</string>
    <string name="toolbar_label_archived_event">Archived Events</string>
    <string name="toast_element_archived">%1$s archived</string>
    <string name="toast_element_unarchived">%1$s un-archived</string>
    <string name="toolbar_label_backup_database_event">Backup Database</string>
    <string name="tV_label_backup_instructions">(1) Click the button to start the backup process.\n(2) Select where to save the backup file.\n\nNote:\n Importing data from backups is not supported currently.\n Exported data is in JSON format but saved as \"html\" to allow quick view of the file in a browser.</string>
    <string name="tV_label_backup_not_successful">An error occurred. Backup file was not created. (Either FileNotFound or IOException.)</string>
    <string name="toast_backup_created_successfully">Database Backup created successfully.</string>
    <string name="toast_backup_restored_successfully">Database Backup restored successfully.</string>
    <string name="toast_backup_created_error">Error during Database Backup creation.</string>
    <string name="toast_backup_restored_error">Error during Database Backup restoration.</string>
    <string name="btn_do_backup">Do Backup</string>
    <string name="btn_restore_backup">Restore Backup</string>
    <string name="dialog_delete_question">Are you sure, you want to permanently delete this %1$s?</string>
    <string name="dialog_delete_hint_corresponding_elements">All corresponding elements will be deleted, too.</string>
    <string name="dialog_delete_yes">Yes, delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="toast_element_deleted">%1$s deleted</string>
    <string name="hint_groupEventName">Group Title</string>
    <string name="hint_groupEventDescription">Description or Notes</string>
    <string name="btn_groupEventColor">Group Color</string>
    <string name="label_groupEventIcon">Group Icon:</string>
    <string name="btn_groupEventParent">Parent Category</string>
    <string name="colorpicker_select_color">Please select a color:</string>
    <string name="iconpicker_select_icon">Please select an icon:</string>
    <string name="hint_eventName">Title (e.g. buy food)</string>
    <string name="hint_eventDescription">Notes (e.g. fridge is empty)</string>
    <string name="btn_parentGroupEvent">Group/ Category</string>
    <string name="label_eventImportance">Importance</string>
    <string name="label_importance_urgency_low">low</string>
    <string name="label_importance_urgency_high">high</string>
    <string name="label_eventUrgency">Urgency</string>
    <string name="label_eventDuration">Duration</string>
    <string name="label_eventDuration_minutes">Minutes:</string>
    <string name="label_eventDuration_hours">Hours:</string>
    <string name="label_eventDueDate">Due Date (optional)</string>
    <string name="label_eventDueDate_setDate">set Date</string>
    <string name="label_eventDueDate_setTime">set Time</string>
    <string name="err_invalid_input_generic">Invalid input.  Please check again.</string>
    <string name="err_invalid_input_missing_name">Please input a title for the %1$s.</string>
    <string name="err_invalid_input_description">Please input a description for the %1$s.</string>
    <string name="err_invalid_input_color">Please select a color for the %1$s.</string>
    <string name="err_invalid_input_icon">Please select an icon for the %1$s.</string>
    <string name="err_invalid_input_parent_element">Please select a parent %1$s for the %2$s.</string>
    <string name="err_invalid_duration">Please a duration longer than 0 Minutes for the %1$s.</string>
    <string name="err_element_not_created">Error: %1$s was not created.</string>
    <string name="placeholder_name" translatable="false">[name]</string>
    <string name="placeholder_description" translatable="false">[description]</string>
    <string name="placeholder_totoday" translatable="false">[day]</string>
    <string name="placeholder_priority" translatable="false">[prio]</string>
    <string name="placeholder_progress" translatable="false">[progress]</string>
    <string name="placeholder_number" translatable="false">[num]</string>
    <string name="placeholder_lorem_ipsum_20words" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</string>
    <string name="placeholder_test" translatable="false">[test]</string>
    <string name="label_cV_event_tododay">Day: %1$d</string>
    <string name="label_cV_event_priority">Prio: %1$.1f</string>
    <string name="label_cV_groupevent_progress_text">%1$d%%</string>
    <string name="content_description_cV_icon">Icon for Element</string>
    <string name="pref_id_page_general" translatable="false">general</string>
    <string name="pref_id_page_planning_preferences" translatable="false">planning_preferences</string>
    <string name="pref_id_page_personalization" translatable="false">personalization</string>
    <string name="pref_id_user_name" translatable="false">user_name</string>
    <string name="pref_id_elements_deletable" translatable="false">elements_deletable</string>
    <string name="pref_id_default_group_event" translatable="false">default_group_event</string>
    <string name="pref_id_default_group_event_id" translatable="false">default_group_event_id</string>
    <string name="pref_id_default_group_event_name" translatable="false">default_group_event_name</string>
    <string name="pref_id_working_capacity" translatable="false">working_capacity</string>
    <string name="pref_id_buffertime" translatable="false">buffertime</string>
    <string name="pref_id_weighting_importance" translatable="false">weighting_importance</string>
    <string name="pref_id_weighting_urgency" translatable="false">weighting_urgency</string>
    <string name="pref_id_pref_cat_pers_export" translatable="false">pref_cat_pers_export</string>
    <string name="pref_id_save_to_calendar" translatable="false">save_to_calendar</string>
    <string name="pref_id_calendar" translatable="false">calendar</string>
    <string name="pref_id_pref_cat_pers_other" translatable="false">pref_cat_pers_other</string>
    <string name="pref_id_show_notification" translatable="false">show_notification</string>
    <string name="pref_id_number_of_notifications" translatable="false">pref_id_number_of_notifications_title</string>
    <string name="pref_id_time_clean_list" translatable="false">time_clean_list</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="pref_page_general">General</string>
    <string name="pref_user_name_title">Your Name</string>
    <string name="pref_default_user_name">John Smith</string>
    <string name="pref_elements_deletable_title">Elements deletable</string>
    <string name="pref_default_group_event">Default Task-Group</string>
    <string name="pref_default_group_event_none_selected">no group selected</string>
    <string name="pref_page_planning_preferences">Planning Preferences</string>
    <string name="pref_working_capacity_title">Working Capacity per day</string>
    <string name="pref_buffer_time_title">Buffer Time</string>
    <string name="pref_weighting_importance_title">Weigthing Importance</string>
    <string name="pref_weighting_urgency_title">Weigthing Urgency</string>
    <string name="pref_cat_pers_export">Export Tasks</string>
    <string name="pref_cat_pers_other">Other</string>
    <string name="pref_page_personalization">Personalization</string>
    <string name="pref_save_to_calendar_title">Save Tasks to calendar</string>
    <string name="pref_select_calendar_title">Select Calendar</string>
    <string name="pref_show_notification_title">Show permanent notifications</string>
    <string name="pref_time_clean_list_title">Clean task list</string>
</resources>