<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditTextPreference
        app:key="@string/pref_id_user_name"
        app:defaultValue="@string/pref_default_user_name"
        app:singleLine="true"
        app:title="@string/pref_user_name_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        app:defaultValue="true"
        app:key="@string/pref_id_elements_deletable"
        app:title="@string/pref_elements_deletable_title" />

    <Preference
        app:key="@string/pref_id_default_group_event"
        app:defaultValue="@string/pref_default_group_event_none_selected"
        app:singleLine="true"
        app:title="@string/pref_default_group_event"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>