<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        app:defaultValue="8"
        app:entries="@array/pref_working_capacity_entries"
        app:entryValues="@array/pref_working_capacity_values"
        app:key="@string/pref_id_working_capacity"
        app:negativeButtonText="@null"
        app:positiveButtonText="@null"
        app:title="@string/pref_working_capacity_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        app:key="@string/pref_id_buffertime"
        app:title="@string/pref_buffer_time_title"
        app:summary="summary"
        android:max="100"
        app:min="0"
        app:defaultValue="20" />

    <EditTextPreference
        app:key="@string/pref_id_weighting_importance"
        app:title="@string/pref_weighting_importance_title"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="1.0" />

    <EditTextPreference
        app:key="@string/pref_id_weighting_urgency"
        app:title="@string/pref_weighting_urgency_title"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="1.0" />

</androidx.preference.PreferenceScreen>