<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.lumdev.tempusfugit.settings.OLDSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_page_general" />

    <header
        android:fragment="de.lumdev.tempusfugit.settings.OLDSettingsActivity$PlanningPreferenceFragment"
        android:icon="@drawable/ic_poll_black_24dp"
        android:title="@string/pref_page_planning_preferences" />

    <header
        android:fragment="de.lumdev.tempusfugit.settings.OLDSettingsActivity$PersonalizationPreferenceFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/pref_page_personalization" />

</preference-headers>
